# rust_simulated_annealing

./: .gitignore  Cargo.toml  Dockerfile  persons.csv  pretty.txt  todo.txt
src/: main.rs  structs.rs
src/helpers/: grouping.rs  mod.rs  partial_shuffle.rs  reporting.rs
