[package]
name = "annealing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
csv = "1.3.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.198"
serde_json = "1.0.116"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
